openapi設定修正
