# src/main/java/com/backend/controller/IndividualController.java
@@ -5,9 +5,6 @@ import java.util.List;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.CrossOrigin;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 
 import com.backend.api.IndividualsApi;
@@ -31,19 +28,19 @@ public class IndividualController implements IndividualsApi {
         return ResponseEntity.ok(individualService.getIndividuals());
     }
 
-    @GetMapping("/individuals/search")
+    @Override
     public ResponseEntity<List<Individual>> searchIndividuals(
-        @RequestParam(name = "species_id", required = false) String speciesId,
-        @RequestParam(name = "fiscal_year", required = false) Integer fiscalYear,
-        @RequestParam(name = "morph", required = false) String morph
+        String speciesId,
+        Integer fiscalYear,
+        String morph
     ) {
         return ResponseEntity.ok(individualService.searchIndividuals(speciesId, fiscalYear, morph));
     }
 
-    @GetMapping("/individuals/{species_id}/{id}")
+    @Override
     public ResponseEntity<Individual> individualsSpeciesIdIdGet(
-        @PathVariable("species_id") String speciesId,
-        @PathVariable("id") String id
+        String speciesId,
+        String id
     ) {
         return ResponseEntity.ok(individualService.getIndividualModel(speciesId, id));
     }
